--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -44,6 +44,7 @@
     display: flex;
     margin-right: 10px;
     align-items: center;
+    color: #5f4b94;
     transition: color 0.5s;
 
     &:hover {
