--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -26,7 +26,7 @@
 
   &__img {
     height: 25px;
-    margin-right: 0;
+    margin-right: 5px;
     border-radius: 50%;
     transition: transform 0.5s;
 
@@ -115,6 +115,7 @@
       @media(max-width: 700px) {
         position: relative;
         top: 10px;
+        margin-right: 5px;
       }
     }
   }
